Update resume splash page picture and fix splash button whitespace

--- a/styles/main.css
+++ b/styles/main.css
@@ -496,8 +496,8 @@ a {
   }
 
   #splash-body {
-    padding: 0px;
-    margin: 0px;
+    padding: 0;
+    margin: 0;
   }
 
   #splash-body div {
@@ -549,6 +549,10 @@ a {
     max-width: 70%;
     padding-bottom: 0;
   }
+
+  footer {
+    margin-top: 0;
+  }
 }
 
 /* Screen width is less than 430px (mobile devices) */
@@ -599,7 +603,6 @@ a {
 
   footer {
     height: 80px;
-    margin-top: 3%
   }
 
   .link-wrapper {
